<resources>
    <string name="app_name">Remote Control</string>

    <string name="voice_recognizer">Start Voice Recognizer</string>
    <string name="recognized_text">recognized text here</string>

    <string name="string_hi">Hi, Federico!</string>
    <string name="string_car">Car trouble</string>
    <string name="string_subway">Subway</string>
    <string name="string_ambulance">Ambulance</string>

</resources>
