<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.androidkt.mqtt.MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sttstart"
            android:layout_width="159dp"
            android:layout_height="80dp"
            android:text="@string/voice_recognizer"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/sttresult"
            android:layout_width="153dp"
            android:layout_height="47dp"
            android:text="@string/recognized_text"
            android:gravity="center"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="4dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_width="116dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="74dp">

            <Button
                android:id="@+id/button_hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_hi" />
            <Button
                android:id="@+id/button_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_car" />
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="116dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="74dp">

            <Button
                android:id="@+id/button_subway"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_subway" />
            <Button
                android:id="@+id/button_ambulance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_ambulance" />
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="status" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/volumeLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volume Level: n/a"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="50dp" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/volumeBars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="50dp" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_width="116dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="74dp">
        <Button
            android:id="@+id/startSndVol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="Start" />

        <Button
            android:id="@+id/endSndVol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="End" />

        </LinearLayout>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
